# mushlabs-case-study

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
mushlabs_ae_case/: __init__.py  assets.py  resources.py
mushlabs_ae_case/dbt_project/: dbt_project.yml
mushlabs_ae_case/dbt_project/models/: gender_inequality_per_country.sql  schema.yml  sources.yml
mushlabs_ae_case/dbt_project/models/Dimension/: gender_inequality_per_country.sql  gender_inequality_per_country_duration.sql  gender_inequality_per_region.sql
mushlabs_ae_case/dbt_project/models/staging/: stg_country.sql  stg_gender_inequality.sql
mushlabs_ae_case/dbt_project/profiles/: .user.yml  profiles.yml
mushlabs_ae_case_tests/: test_assets.py  test_resources.py
