[tool.poetry]
name = "mushlabs_ae_case"
version = "0.0.1"
description = ""
authors = ["Vinnie <vdalpiccol@gmail.com>"]
packages = [{include = "mushlabs_ae_case"}]

[tool.poetry.dependencies]
python = "^3.9"
dagit = "1.3.5"
dagster = "1.3.5"
dagster-dbt = "0.19.5"
dbt-core = "<1.5.0"
dbt-duckdb = "<1.5.0"
dagster-duckdb-pandas = "^0.19.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "mushlabs_ae_case"
